fix(styles): Adjust progress bar margin This commit adjusts the bottom margin of the progress bar for better visual alignment.

--- a/src/global.css
+++ b/src/global.css
@@ -24,7 +24,7 @@
       var(--color-primary)
     );
     background-repeat: no-repeat;
-    margin-bottom: -7px;
+    margin-bottom: 10px;
     background-size: var(--range-progress, 0%) 100%;
   }
 
